crates/red_knot_workspace/src/workspace/snapshots/red_knot_workspace__workspace__metadata__tests__member_pattern_matching_hidden_folder.snap
---
source: crates/red_knot_workspace/src/workspace/metadata.rs
expression: "&workspace"
snapshot_kind: text
---
Ok(
    WorkspaceMetadata {
        root: "<ROOT>",
        packages: [
            PackageMetadata {
                name: Name("workspace-root"),
                root: "<ROOT>",
                configuration: Configuration {
                    target_version: None,
                    search_paths: SearchPathConfiguration {
                        extra_paths: None,
                        src_root: None,
                        custom_typeshed: None,
                        site_packages: None,
                    },
                },
            },
        ],
        settings: WorkspaceSettings {
            program: ProgramSettings {
                target_version: PythonVersion {
                    major: 3,
                    minor: 8,
                },
                search_paths: SearchPathSettings {
                    extra_paths: [],
                    workspace_root: "<ROOT>",
                    custom_typeshed: None,
                    site_packages: Known(
                        [],
                    ),
                },
            },
        },
    },
)
