crates/red_knot_workspace/src/workspace/snapshots/red_knot_workspace__workspace__metadata__tests__package_without_pyproject.snap
---
source: crates/red_knot_workspace/src/workspace/metadata.rs
expression: "&workspace"
---
WorkspaceMetadata(
  root: "/app",
  packages: [
    PackageMetadata(
      name: Name("app"),
      root: "/app",
      configuration: Configuration(
        target_version: None,
        search_paths: SearchPathConfiguration(
          extra_paths: None,
          src_root: None,
          custom_typeshed: None,
          site_packages: None,
        ),
      ),
    ),
  ],
  settings: WorkspaceSettings(
    program: ProgramSettings(
      target_version: PythonVersion(
        major: 3,
        minor: 8,
      ),
      search_paths: SearchPathSettings(
        extra_paths: [],
        workspace_root: "/app",
        custom_typeshed: None,
        site_packages: Known([]),
      ),
    ),
  ),
)
