crates/red_knot_workspace/src/workspace/snapshots/red_knot_workspace__workspace__metadata__tests__single_package.snap
---
source: crates/red_knot_workspace/src/workspace/metadata.rs
expression: workspace
snapshot_kind: text
---
WorkspaceMetadata(
  root: "/app",
  packages: [
    PackageMetadata(
      name: Name("backend"),
      root: "/app",
      configuration: Configuration(
        python_version: None,
        search_paths: SearchPathConfiguration(
          extra_paths: None,
          src_root: None,
          typeshed: None,
          site_packages: None,
        ),
      ),
    ),
  ],
  settings: WorkspaceSettings(
    program: ProgramSettings(
      python_version: PythonVersion(
        major: 3,
        minor: 9,
      ),
      search_paths: SearchPathSettings(
        extra_paths: [],
        src_root: "/app",
        typeshed: None,
        site_packages: Known([]),
      ),
    ),
  ),
)
