crates/red_knot_workspace/src/workspace/snapshots/red_knot_workspace__workspace__metadata__tests__workspace_members.snap
---
source: crates/red_knot_workspace/src/workspace/metadata.rs
expression: workspace
snapshot_kind: text
---
WorkspaceMetadata(
  root: "/app",
  packages: [
    PackageMetadata(
      name: Name("workspace-root"),
      root: "/app",
      configuration: Configuration(
        python_version: None,
        search_paths: SearchPathConfiguration(
          extra_paths: None,
          src_root: None,
          typeshed: None,
          site_packages: None,
        ),
      ),
    ),
    PackageMetadata(
      name: Name("member-a"),
      root: "/app/packages/a",
      configuration: Configuration(
        python_version: None,
        search_paths: SearchPathConfiguration(
          extra_paths: None,
          src_root: None,
          typeshed: None,
          site_packages: None,
        ),
      ),
    ),
    PackageMetadata(
      name: Name("member-x"),
      root: "/app/packages/x",
      configuration: Configuration(
        python_version: None,
        search_paths: SearchPathConfiguration(
          extra_paths: None,
          src_root: None,
          typeshed: None,
          site_packages: None,
        ),
      ),
    ),
  ],
  settings: WorkspaceSettings(
    program: ProgramSettings(
      python_version: "3.9",
      search_paths: SearchPathSettings(
        extra_paths: [],
        src_root: "/app",
        typeshed: None,
        site_packages: Known([]),
      ),
    ),
  ),
)
